# unicorn-binance-rest-api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  dev_test.py  dev_test_endpoints.py  environment.yml  example_buy_and_sell_oco_order_isolated_margin.py  example_client.py  example_commission_rate.py  example_doing_something.py  example_easy_migration_from_python-binance.py  example_exchange_endpoints.py  example_exchange_info.py  example_futures_commission_rate.py  example_historical_data.py  example_logging.py  example_orders.py  example_socks5_proxy.py  example_version_of_this_package.py  meta.yaml  pyproject.toml  requirements.txt  reset.sh  setup.py  unittest_binance_rest_api.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: build_conda.yml  build_wheels.yml  codeql-analysis.yml  python-app.yml  unit-tests.yml
dev/: link_lib.sh  reset.sh  set_version_config.txt  test_endpoints.py  test_exceptions.py  test_multi_tenant.py  test_ping.py  unlink_lib.sh
dev/pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
dev/sphinx/: create_docs.sh  install_sphinx.sh
dev/sphinx/source/: changelog.md  conf.py  index.rst  license.rst  readme.md  security.md  unicorn_binance_rest_api.rst
docs/: .buildinfo  CHANGELOG.html  CNAME  README.html  changelog.html  code_of_conduct.html  contributing.html  copyright.html  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  security.html  unicorn_binance_rest_api.html  unicorn_binance_websocket_api.html
docs/_modules/: index.html
docs/_modules/unicorn_binance_rest_api/: exceptions.html  helpers.html  manager.html
docs/_sources/: CHANGELOG.md.txt  README.md.txt  changelog.md.txt  copyright.rst.txt  modules.rst.txt  readme.md.txt  unicorn_binance_rest_api.rst.txt
examples/: README.md
examples/_archive/: example_buy_and_sell_oco_order_isolated_margin.py  example_doing_something.py  example_easy_migration_from_python-binance.py  example_exchange_endpoints.py  example_exchange_info.py  example_futures_commission_rate.py  example_historical_data.py  example_logging.py  example_orders.py  example_version_of_this_package.py
pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
sphinx/: create_docs.sh  install_sphinx.sh  release_docs.sh
sphinx/source/: changelog.md  conf.py  contributing.md  index.rst  readme.md
unicorn-binance-rest-api/: client.py  depthcache.py
unicorn_binance_rest_api/: __init__.py  client.py  depthcache.py  enums.py  exceptions.py  helpers.py  licensing_manager.py  manager.py  unicorn_binance_rest_api_enums.py  unicorn_binance_rest_api_exceptions.py  unicorn_binance_rest_api_helpers.py  unicorn_binance_rest_api_manager.py
